--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,18 +36,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   audioplayers:
+  shared_preferences:
+
+  # Mock
+  mocktail: ^0.3.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  integration_test:
+    sdk: flutter
   flutter_lints: ^2.0.0
-  mockito:
+  faker:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
