--- a/assets/audio/rules.yaml
+++ b/assets/audio/rules.yaml
@@ -1187,62 +1187,61 @@ Glossary:
 
   2. Parts of a Card:
 
-    - 200. General
+    200. General:
 
-      200.1. The parts of a card are name, mana cost, illustration, color indicator, type line, expansion symbol, text box, power and toughness, loyalty, hand modifier, life modifier, illustration credit, legal text, and collector number. Some cards may have more than one of any or all of these parts.
+      - 200.1. The parts of a card are name, mana cost, illustration, color indicator, type line, expansion symbol, text box, power and toughness, loyalty, hand modifier, life modifier, illustration credit, legal text, and collector number. Some cards may have more than one of any or all of these parts.
 
-      200.2. Some parts of a card are also characteristics of the object that has them. See rule 109.3.
+      - 200.2. Some parts of a card are also characteristics of the object that has them. See rule 109.3.
 
-      200.3. Some objects that aren’t cards (tokens, copies of cards, and copies of spells) have some of the parts of a card, but only the ones that are also characteristics. See rule 111 and rule 707.
+      - 200.3. Some objects that aren’t cards (tokens, copies of cards, and copies of spells) have some of the parts of a card, but only the ones that are also characteristics. See rule 111 and rule 707.
 
-    - 201. Name
+    201. Name:
 
-      201.1. The name of a card is printed on its upper left corner.
+      - 201.1. The name of a card is printed on its upper left corner.
 
-      201.2. A card’s name is always considered to be the English version of its name, regardless of printed language.
+      - 201.2. A card’s name is always considered to be the English version of its name, regardless of printed language.
 
-      201.2a Two or more objects have the same name if they have at least one name in common, even if one or more of those objects have additional names. An object with no name doesn’t have the same name as any other object, including another object with no name.
+        - 201.2a Two or more objects have the same name if they have at least one name in common, even if one or more of those objects have additional names. An object with no name doesn’t have the same name as any other object, including another object with no name.
 
-      201.2b Some spells and abilities refer to two or more objects with different names. Those objects have different names only if each of them has at least one name and no two objects in that group have a name in common.
-      Example, A player controls Liliana’s Contract, which says, in part, “At the beginning of your upkeep, if you control four or more Demons with different names, you win the game.” That player controls three Demons with different names and a face-down creature with no name, with an effect making it a Demon. Because the four creatures include one with no name, those four creatures don’t count as four Demons with different names. The ability of Liliana’s Contract won’t trigger.
+        - 201.2b Some spells and abilities refer to two or more objects with different names. Those objects have different names only if each of them has at least one name and no two objects in that group have a name in common. Example, A player controls Liliana’s Contract, which says, in part, “At the beginning of your upkeep, if you control four or more Demons with different names, you win the game.” That player controls three Demons with different names and a face-down creature with no name, with an effect making it a Demon. Because the four creatures include one with no name, those four creatures don’t count as four Demons with different names. The ability of Liliana’s Contract won’t trigger.
 
-      201.2c Some spells or abilities check if one object has a different name than a second object or group of objects. The first object has a different name than those objects if the first object has at least one name and has no names in common with any of the other objects, even if one or more of the other objects have no names. If the first object has no name, it does not have a different name than any of the other objects, even if those other objects themselves have names.
+        - 201.2c Some spells or abilities check if one object has a different name than a second object or group of objects. The first object has a different name than those objects if the first object has at least one name and has no names in common with any of the other objects, even if one or more of the other objects have no names. If the first object has no name, it does not have a different name than any of the other objects, even if those other objects themselves have names.
 
-      201.3.  Some cards with different English names are treated as though they had the same English name. Pairs of cards with this property have names that are interchangeable.
+      - 201.3.  Some cards with different English names are treated as though they had the same English name. Pairs of cards with this property have names that are interchangeable.
 
-      201.3a For the purposes of all rules, abilities, and effects that refer to a card’s name, objects with interchangeable names have the same name. (See rules 201.2a–b.)
+        - 201.3a For the purposes of all rules, abilities, and effects that refer to a card’s name, objects with interchangeable names have the same name. (See rules 201.2a–b.)
 
-      201.3b For the purposes of deck construction and format legality, cards with interchangeable names have the same name.
+        - 201.3b For the purposes of deck construction and format legality, cards with interchangeable names have the same name.
 
-      201.3c If a card has later printings with interchangeable names, the later printings will have an interchangeable names indicator in the bottom left-hand corner referring to the original printing’s three-letter set code and collector number (see rule 212.1d).
+        - 201.3c If a card has later printings with interchangeable names, the later printings will have an interchangeable names indicator in the bottom left-hand corner referring to the original printing’s three-letter set code and collector number (see rule 212.1d).
 
-      201.4. If an effect instructs a player to choose a card name, the player must choose the name of a card in the Oracle card reference. (See rule 108.1.) A player may not choose the name of a token unless it’s also the name of a card.
+      - 201.4. If an effect instructs a player to choose a card name, the player must choose the name of a card in the Oracle card reference. (See rule 108.1.) A player may not choose the name of a token unless it’s also the name of a card.
 
-      201.4a If a player is instructed to choose a card name with certain characteristics, the player must choose the name of a card whose Oracle text matches those characteristics. (See rule 108.1.)
+        - 201.4a If a player is instructed to choose a card name with certain characteristics, the player must choose the name of a card whose Oracle text matches those characteristics. (See rule 108.1.)
 
-      201.4b If a player wants to choose the name of a split card, the player must choose the name of one of its halves, but not both. (See rule 709.) If a player is instructed to choose a card name with certain characteristics, use only that half’s characteristics to determine if this name can be chosen.
+        - 201.4b If a player wants to choose the name of a split card, the player must choose the name of one of its halves, but not both. (See rule 709.) If a player is instructed to choose a card name with certain characteristics, use only that half’s characteristics to determine if this name can be chosen.
 
-      201.4c If a player wants to choose a flip card’s alternative name, the player may do so. (See rule 710.) If a player is instructed to choose a card name with certain characteristics, use the card’s characteristics as modified by its alternative characteristics to determine if this name can be chosen.
+        - 201.4c If a player wants to choose a flip card’s alternative name, the player may do so. (See rule 710.) If a player is instructed to choose a card name with certain characteristics, use the card’s characteristics as modified by its alternative characteristics to determine if this name can be chosen.
 
-      201.4d If a player wants to choose the name of the back face of a double-faced card, the player may do so. (See rule 712.) If a player is instructed to choose a card name with certain characteristics, use only the characteristics of the back face to determine if this name can be chosen.
+        - 201.4d If a player wants to choose the name of the back face of a double-faced card, the player may do so. (See rule 712.) If a player is instructed to choose a card name with certain characteristics, use only the characteristics of the back face to determine if this name can be chosen.
 
-      201.4e If a player wants to choose the name of the combined back face of a meld pair, the player may do so. (See rule 713.) If a player is instructed to choose a card name with certain characteristics, use only the characteristics of the combined back face to determine if this name can be chosen.
+        - 201.4e If a player wants to choose the name of the combined back face of a meld pair, the player may do so. (See rule 713.) If a player is instructed to choose a card name with certain characteristics, use only the characteristics of the combined back face to determine if this name can be chosen.
 
-      201.4f If a player wants to choose an adventurer card’s alternative name, the player may do so. (See rule 716.) If a player is instructed to choose a card name with certain characteristics, use the card’s characteristics as modified by its alternative characteristics to determine if this name can be chosen.
+        - 201.4f If a player wants to choose an adventurer card’s alternative name, the player may do so. (See rule 716.) If a player is instructed to choose a card name with certain characteristics, use the card’s characteristics as modified by its alternative characteristics to determine if this name can be chosen.
 
-      201.4g Some cards have interchangeable names (see rule 201.3). For all game purposes, these cards have the same name. If a player chooses the name of a card which has interchangeable names, the name of each of those cards has been chosen.
+        - 201.4g Some cards have interchangeable names (see rule 201.3). For all game purposes, these cards have the same name. If a player chooses the name of a card which has interchangeable names, the name of each of those cards has been chosen.
 
-      201.5. Text that refers to the object it’s on by name means just that particular object and not any other objects with that name, regardless of any name changes caused by game effects.
+      - 201.5. Text that refers to the object it’s on by name means just that particular object and not any other objects with that name, regardless of any name changes caused by game effects.
 
-      201.5a If an ability’s effect grants another ability to an object, and that second ability refers to that first ability’s source by name, the name refers only to the specific object which is that first ability’s source. The second ability does not refer to any other object with the same name as the first ability’s source. However, if the second ability also moved the first ability’s source to a different public zone, the name refers to the object the source became in its new zone. This is also true if the second ability is copied onto a new object.
+        - 201.5a If an ability’s effect grants another ability to an object, and that second ability refers to that first ability’s source by name, the name refers only to the specific object which is that first ability’s source. The second ability does not refer to any other object with the same name as the first ability’s source. However, if the second ability also moved the first ability’s source to a different public zone, the name refers to the object the source became in its new zone. This is also true if the second ability is copied onto a new object.
 
-      201.5b If an ability of an object refers to that object by name, and an object with a different name gains that ability, each instance of the first name in the gained ability that refers to the first object by name should be treated as the second name.
+        - 201.5b If an ability of an object refers to that object by name, and an object with a different name gains that ability, each instance of the first name in the gained ability that refers to the first object by name should be treated as the second name.
 
-      201.5c Text printed on some legendary cards refers to that card by a shortened version of its name. Instances of a card’s shortened name used in this manner are treated as though they used the card’s full name.
+        - 201.5c Text printed on some legendary cards refers to that card by a shortened version of its name. Instances of a card’s shortened name used in this manner are treated as though they used the card’s full name.
 
-      201.6. Promotional or alternate-art versions of some cards feature a secondary title bar below the name line. The card’s name as listed in the Oracle card reference is displayed in the secondary title bar, and an alternate name appears in the upper left corner. For the purposes of deck construction, game rules, and effects, these cards have only the card name specified in the secondary title bar. Rules text may also refer to a card’s alternate name; instances of the alternate name that are present in rules text refer to the name specified in the secondary title bar. The alternate name has no effect on game play.
+      - 201.6. Promotional or alternate-art versions of some cards feature a secondary title bar below the name line. The card’s name as listed in the Oracle card reference is displayed in the secondary title bar, and an alternate name appears in the upper left corner. For the purposes of deck construction, game rules, and effects, these cards have only the card name specified in the secondary title bar. Rules text may also refer to a card’s alternate name; instances of the alternate name that are present in rules text refer to the name specified in the secondary title bar. The alternate name has no effect on game play.
 
-      202. Mana Cost and Color
+    202. Mana Cost and Color:
 
       202.1. A card’s mana cost is indicated by mana symbols near the top of the card. (See rule 107.4.) On most cards, these symbols are printed in the upper right corner. Some cards from the Future Sight set have alternate frames in which the mana symbols appear to the left of the illustration.
 
