--- a/assets/audio/rules.yaml
+++ b/assets/audio/rules.yaml
@@ -158,6 +158,9 @@ Contents:
     - 904. Archenemy
     - 905. Conspiracy Draft
 
+Date:
+  - These rules are effective as of October 7, 2022.
+
 Glossary:
 
   1. Game Concepts:
@@ -1731,7 +1734,6 @@ Glossary:
       - 314.6. The owner of a conspiracy card is the player who put it into the command zone at the start of the game. The controller of a conspiracy card is its owner.
 
       - 314.7. At any time, you may look at a face-down conspiracy card you control. You can’t look at face-down conspiracy cards controlled by other players.
-
 
   4. Zones:
 
